# EpidemIQs

./: .gitignore  License.txt  README.md  config.yaml  pyproject.toml  test.py
becnhmark results/: show_result.py
becnhmark results/full_scientist/: 00000001.json  00000003.json  00000005.json  00000006.json  00000007.json  00000008.json  00000010.json  00000012.json  00000014.json  00000016.json  00000017.json  00000020.json  00000022.json  00000025.json  00000026.json  00000027.json  00000028.json  00000030.json  00000031.json  00000032.json  00000033.json  00000035.json  00000036.json  00000037.json  00000038.json  00000039.json  00000043.json  results_process.json
becnhmark results/full_scientist1/: 00000001.json  00000006.json  00000007.json  00000008.json  00000009.json  00000011.json  00000012.json  00000017.json  00000018.json  00000019.json  00000020.json  00000022.json  00000025.json  00000026.json  00000028.json  00000029.json  00000030.json  00000031.json  00000034.json  00000035.json  00000037.json  00000038.json  00000039.json  (+3 more)
becnhmark_results/: readme.md  show_result.py
experiments/: .gitignore  readme.md
images/: logo.pptx
questions/: cases_data.xlsx  flue-config.yaml  question-1-config.yaml  question-10-config.yaml  question-2-config.yaml  question-3-1-config.yaml  question-3-config.yaml  question-4-config.yaml  question-5-config.yaml  question-6-config.yaml  question-7-config.yaml  question-8-config.yaml  question-9-config.yaml  questions.json
tests/: literature_retriever_expert.py  online_retriever_expert.py  vision_expert.py  xx.py
(+4039 files in other folders)
