[project]
name = "epidemiqs"
version = "0.1.0"
description = " EpidemIQs: Prompt-to-Paper LLM Agents for Epidemic Modeling and Analysis"
readme = "README.md"
authors = [
    { name = "Mohammad Hossein Samaei", email = "m.hosseinsamaei@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastgemf>=0.1.4",
    "openai>=2.3.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.2",
    "pydantic-ai>=1.1.0",
    "pydantic-ai-slim[anthropic,google,openai]>=1.1.0",
    "rapidfuzz>=3.14.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "sympy>=1.14.0",
    "tavily>=1.0.0",
    "termcolor>=3.1.0",
    "typer>=0.20.0",
]
[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
epidemiqs = "epidemiqs.cli:app"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
